# easycoin-program

./: Anchor.toml  README.md
programs/easycoin/: Cargo.toml
programs/easycoin/src/: errors.rs  events.rs  external_program.rs  lib.rs
programs/easycoin/src/instructions/: close_owner_account.rs  close_user_token_account.rs  collect_fee.rs  create_owner_account.rs  create_user_account.rs  create_user_token_account.rs  initialize.rs  initialize_fee.rs  initialize_pause.rs  manage.rs  manage_fee.rs  mod.rs  pause.rs  set_pauser.rs  swap_on_jupiter.rs  swap_on_pumpfun.rs  swap_on_pumpfun_v2.rs  tip_jito.rs  transfer_and_sync_wsol.rs  withdraw.rs
programs/easycoin/src/state/: fee.rs  mod.rs  operator.rs  owner_account.rs  pause.rs  seeds.rs
tests/: easycoin.ts
