[package]
name = "easycoin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "easycoin"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
enable-log = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["event-cpi"] }
anchor-spl = "0.30.1"
uint = "0.9.5"
pumpfun_cpi = { path = "../../generated/pumpfun_cpi"}
